# hadron

./: README.md  ambiata-hadron.cabal  ambiata-hadron.lock-7.10.2  boris-git.toml  boris.toml  master.toml
framework/: mafia
hadron-core/: ambiata-hadron-core.cabal  ambiata-hadron-core.lock-7.10.2  ambiata-hadron-core.lock-7.8.4  ambiata-hadron-core.lock-8.0.1  master.toml
hadron-core/main/: hadron.hs
hadron-core/src/Hadron/: Core.hs
hadron-core/src/Hadron/Core/: Data.hs  Error.hs  Request.hs
hadron-core/src/Hadron/Core/Data/: Header.hs  Request.hs  Target.hs  Version.hs
hadron-core/src/Hadron/Core/Parser/: Common.hs  Header.hs  Request.hs  Target.hs
hadron-core/test/: ambiata-hadron-core-test.cabal  ambiata-hadron-core-test.lock-8.0.1  test-cli.hs  test.hs
hadron-core/test/Test/Hadron/Core/: Arbitrary.hs  Gen.hs  Parser.hs  Request.hs
hadron-core/test/Test/Hadron/Core/Data/: Request.hs  Version.hs
hadron-core/test/Test/Hadron/Core/Parser/: Header.hs  Request.hs  Target.hs
hadron-core/test/cli/core/: setup.sh
hadron-wai/: ambiata-hadron-wai.cabal  ambiata-hadron-wai.lock-7.10.2  ambiata-hadron-wai.lock-7.8.4  ambiata-hadron-wai.lock-8.0.1  master.toml
hadron-wai/src/Hadron/: Wai.hs
hadron-wai/src/Hadron/Wai/: Error.hs  Request.hs
hadron-wai/test/: test-io.hs
hadron-wai/test/Test/IO/Hadron/Wai/: Request.hs
main/: hadron.hs
src/: Hadron.hs
src/Hadron/: Data.hs  Error.hs  Header.hs  Request.hs
src/Hadron/Data/: Header.hs  Request.hs  Target.hs  Version.hs
src/Hadron/Parser/: Common.hs  Header.hs  Request.hs  Target.hs
test/: ambiata-hadron-test.cabal  test.hs
test/Test/Hadron/: Arbitrary.hs  Gen.hs  Parser.hs  Request.hs
test/Test/Hadron/Data/: Request.hs  Version.hs
test/Test/Hadron/Parser/: Header.hs  Request.hs  Target.hs
test/cli/basic-usage/: run
