name:                  ambiata-hadron
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-hadron
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-hadron

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-attoparsec
                     , attoparsec                      >= 0.10 && < 0.13
                     , bytestring                      >= 0.10.4     && <= 0.10.8.1
                     , deepseq-generics                == 0.2.0.*
                     , semigroups                      >= 0.16       && < 0.19
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_hadron
                       Hadron
                       Hadron.Data
                       Hadron.Data.Header
                       Hadron.Data.Request
                       Hadron.Data.Target
                       Hadron.Data.Version
                       Hadron.Parser.Common
                       Hadron.Parser.Header
                       Hadron.Parser.Request
                       Hadron.Parser.Target

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-hadron
                     , attoparsec                      >= 0.10 && < 0.13
                     , bytestring                      >= 0.10.4     && <= 0.10.8.1
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
