name:                  ambiata-hadron-wai
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-hadron-wai
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-hadron-wai

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-hadron-core
                     , ambiata-p
                     , ambiata-x-eithert
                     , attoparsec                      >= 0.10 && < 0.14
                     , bytestring                      >= 0.10.4     && <= 0.10.8.1
                     , case-insensitive                 == 1.2.*
                     , deepseq-generics                == 0.2.0.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , wai                             >= 3.0 && < 3.3


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_hadron_wai
                       Hadron.Wai
                       Hadron.Wai.Error
                       Hadron.Wai.Request

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-hadron-wai
                     , bytestring                      >= 0.10.4     && <= 0.10.8.1
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
